feature: added new scripts to run

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "To view, share, and create electronic business cards for students",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --exec yarn restart",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel views/index.html views/app.js",
+    "test": "nodemon server.js",
+    "dev": "parcel build views/index.html",
+    "error": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
