--- a/virtualstack/package.json
+++ b/virtualstack/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-maskedinput": "^0.4.0",
     "react-dom": "^16.12.0",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
